--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
   <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/TextPlugin.min.js'></script>
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.0.1/dist/EasePack.min.js"></script>
+
+  <script src="./js/safari_vh.js"></script>
+  
   <script>
     gsap.registerPlugin(TextPlugin, EasePack);
 
