--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
   <style>
     body {
+      height: 100vh; /*給 Safari 以外的瀏覽器讀取*/
+      height: calc(var(--vh, 1vh) * 100);
       background-color: #000;
       color: white;
       margin: 0;
