--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     #demo {
       position: relative;
       width: 100vw;
-      height: 100vh;
+      height: 100%;
       background-color: #000;
       margin: auto;
       overflow: hidden;
